# django-langchained

./: LICENSE  Makefile  README.md  STEPS.md  pyproject.toml
chatbot/: urls.py  views.py
chatbot/templates/chatbot/: index.html
settings/: settings.py  urls.py
